\name{NEWS}
\title{News for Package \pkg{inline}}
\newcommand{\ghpr}{\href{https://github.com/eddelbuettel/inline/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/eddelbuettel/inline/issues/#1}{##1}}

\section{Changes in inline version 0.3.19 (2021-05-25)}{
  \itemize{
    \item Documentation for \code{moveDLL} was updated and extended
    (Johannes in \ghpr{22}).
    \item A few more tests were made conditional the test platform (Dirk
    in \ghpr{24}).
  }
}

\section{Changes in inline version 0.3.18 (2021-05-17)}{
  \itemize{
    \item The \code{moveDLL} code and tests were updated for changed in
    R-devel (Johannes in \ghpr{22} fixing \ghit{21}).
  }
}

\section{Changes in inline version 0.3.17 (2020-11-30)}{
  \itemize{
    \item Unit testing is now supported via \pkg{tinytest} (Johannes in
    \ghpr{15} addressing \ghit{14}).
    \item CI was updated to use focal and run.sh from r-ci on Travis and
    GitHub Actions (Dirk)
    \item The writing and reading of compiled code was refactored and
    extended (Johannes in \ghpr{16} fixing \ghit{13}).
    \item Some minor problems related to CRAN checks and tests were corrected
    (Johannes and Dirk in \ghpr{17}, Johannes in \ghpr{18}, \ghpr{19}, \ghpr{20}).
    \item Small stylistic updates have been applied to some R and Rd
    files (Dirk).
  }
}

\section{Changes in inline version 0.3.16 (2020-09-06)}{
  \itemize{
    \item Maintenance updates to README.md standardizing badges (Dirk).
    \item Maintenance update to Travis CI setup (Dirk).
    \item Switch to using \code{system2()} for better error diagnostics
    (Ben Goodrich in \ghpr{12}).
  }
}

\section{Changes in inline version 0.3.15 (2018-05-18)}{
  \itemize{
    \item Correct \code{requireNamespace()} call thanks (Alexander
    Grueneberg in \ghpr{5}).
    \item Small simplification to \code{.travis.yml}; also switch to https.
    \item Use \code{seq_along} instead of \code{seq(along=...)} (Watal
    M. Iwasaki) in \ghpr{6}).