@@ -1,12 +1,20 @@
 Package: inline
-Version: 0.3.19
-Date: 2021-05-25
+Version: 0.3.20
+Date: 2024-11-10
 Title: Functions to Inline C, C++, Fortran Function Calls from R
-Author: Oleg Sklyar, Duncan Murdoch, Mike Smith, Dirk Eddelbuettel, 
- Romain Francois, Karline Soetaert, Johannes Ranke
-Maintainer: Dirk Eddelbuettel <edd@debian.org>
+Authors@R: c(person("Oleg", "Sklyar", role = "aut"),
+             person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
+                    comment = c(ORCID = "0000-0001-6419-907X")),
+             person("Romain", "Francois", role = "aut",
+                    comment = c(ORCID = "0000-0002-2444-4226")),
+             person("Mike", "Smith", role = "ctb"),
+             person("Duncan", "Murdoch", role = "ctb"),
+             person("Karline", "Soetaert", role = "ctb",
+                    comment = c(ORCID = "0000-0003-4603-7100")),
+             person("Johannes", "Ranke", role = "ctb",
+                    comment = c(ORCID = "0000-0003-4371-6538")))
 Imports: methods
-Suggests: Rcpp (>= 0.11.0), tinytest
+Suggests: Rcpp, tinytest
 Description: Functionality to dynamically define R functions and S4 methods
  with 'inlined' C, C++ or Fortran code supporting the .C and .Call calling
  conventions.
@@ -17,6 +25,14 @@ URL: https://github.com/eddelbuettel/inline,
         https://dirk.eddelbuettel.com/code/inline.html
 BugReports: https://github.com/eddelbuettel/inline/issues
 NeedsCompilation: no
-Packaged: 2021-05-25 12:45:08 UTC; edd
+Packaged: 2024-11-10 15:15:05 UTC; edd
+Author: Oleg Sklyar [aut],
+  Dirk Eddelbuettel [aut, cre] (<https://orcid.org/0000-0001-6419-907X>),
+  Romain Francois [aut] (<https://orcid.org/0000-0002-2444-4226>),
+  Mike Smith [ctb],
+  Duncan Murdoch [ctb],
+  Karline Soetaert [ctb] (<https://orcid.org/0000-0003-4603-7100>),
+  Johannes Ranke [ctb] (<https://orcid.org/0000-0003-4371-6538>)
+Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Repository: CRAN
-Date/Publication: 2021-05-31 08:40:02 UTC
+Date/Publication: 2024-11-10 17:20:02 UTC
