@@ -29,13 +29,13 @@ Generate the skeleton of a package
 \dontrun{
 
 fx <- cxxfunction(signature(x = "integer", y = "numeric"),
-	          "return ScalarReal( INTEGER(x)[0] * REAL(y)[0]);")
+	          "return Rf_ScalarReal( INTEGER(x)[0] * REAL(y)[0]);")
 package.skeleton("foo", fx)
 
 functions <- cxxfunction(list(ff = signature(), 
                               gg = signature(x = "integer", y = "numeric")), 
                          c("return R_NilValue ;",
-                           "return ScalarReal(INTEGER(x)[0] * REAL(y)[0]);"))
+                           "return Rf_ScalarReal(INTEGER(x)[0] * REAL(y)[0]);"))
 package.skeleton("foobar", functions)
 
 }
